--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /public/storage
 /storage/*.key
 /data.ms
+/database/migrationsbackup
 /vendor
 .env
 .env.backup
@@ -14,3 +15,4 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+.database.sql
